[gd_scene load_steps=2 format=3 uid="uid://di8g1yirp1yfp"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_6eo47"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6eo47")

[node name="backtomenu" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 158.0
offset_bottom = 31.0
text = "Back to main menu"

[node name="loadingimage" type="Button" parent="."]
layout_mode = 0
offset_left = 269.0
offset_top = 364.0
offset_right = 427.0
offset_bottom = 395.0
text = "Load image
"

[node name="grass" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 462.0
offset_right = 240.0
offset_bottom = 493.0
text = "Grass Level"

[node name="snow" type="Button" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 462.0
offset_right = 430.0
offset_bottom = 493.0
text = "Snow Level
"

[node name="nonlinear" type="Button" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 536.0
offset_right = 430.0
offset_bottom = 567.0
text = "Non-linear
"

[node name="level" type="Button" parent="."]
layout_mode = 0
offset_left = 466.0
offset_top = 462.0
offset_right = 624.0
offset_bottom = 493.0
text = "Level
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 262.0
offset_top = 254.0
offset_right = 434.0
offset_bottom = 355.0
text = "Controls:
Arrow Keys to fly,
Spacebar to shoot
T to change framerate"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 423.0
offset_right = 538.0
offset_bottom = 524.0
text = "You have to load image before starting game"
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(340, 159)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="preview" type="Sprite2D" parent="."]
position = Vector2(349, 154)
scale = Vector2(0.1, 0.1)

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 116.0
offset_right = 439.0
offset_bottom = 217.0
text = "Preview:"
horizontal_alignment = 1

[connection signal="pressed" from="loadingimage" to="." method="_on_loadingimage_pressed"]
[connection signal="pressed" from="grass" to="." method="_on_grass_pressed"]
[connection signal="pressed" from="snow" to="." method="_on_snow_pressed"]
[connection signal="pressed" from="nonlinear" to="." method="_on_nonlinear_pressed"]
[connection signal="pressed" from="level" to="." method="_on_level_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
